--- a/packages/client/src/app/patient/components/membres/membres.component.html
+++ b/packages/client/src/app/patient/components/membres/membres.component.html
@@ -1,14 +1,14 @@
 <div class="wrapper">
-  <div fxLayout="row" fxLayoutWrap="wrap">
-    <div fxFlex.gt-sm="40" fxFlex="100">
-      <mat-card>
+  <mat-card>
+    <div fxLayout="row" fxLayoutWrap="wrap">
+      <div fxFlex.gt-sm="40" fxFlex="100">
         <mat-card-content>
           <div fxLayout="column">
             <mat-form-field style="width: 100%">
               <mat-select [(value)]="selected" placeholder="Medecin" [(ngModel)]="medcinId">
                 <mat-option></mat-option>
                 <mat-option *ngFor="let medcin of medcins" [value]="medcin.id">
-                   {{medcin.firstName }}   {{medcin.lastName}}
+                  {{medcin.firstName }}   {{medcin.lastName}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -17,52 +17,20 @@
             </button>
           </div>
         </mat-card-content>
-      </mat-card>
+      </div>
+      <div fxFlex.gt-sm="60" fxFlex="100">
+        <ngx-datatable *ngIf='members'
+          class="material" [rows]="members"
+          [columnMode]="'force'" [headerHeight]="50"
+          [footerHeight]="50" [rowHeight]="50"
+          [scrollbarV]="true" [limit]="6">
+          <ngx-datatable-column [width]="150" name="Nom" prop="firstName" [resizeable]="false"></ngx-datatable-column>
+          <ngx-datatable-column [width]="150" name="Prénom" prop="lastName" [resizeable]="false"></ngx-datatable-column>
+          <ngx-datatable-column [width]="150" name="Admin" prop="admin" [resizeable]="false"></ngx-datatable-column>
+          <ngx-datatable-column [width]="150" name="Authorized" prop="isAuthorize" [resizeable]="false"></ngx-datatable-column>
+        </ngx-datatable>
+      </div>
     </div>
-    <div fxFlex.gt-sm="60" fxFlex="100">
-      <mat-card>
-        <mat-card-content>
-          <mat-table #table [dataSource]="dataSource">
-
-            <ng-container matColumnDef="id">
-              <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-              <mat-cell *matCellDef="let medcin"> {{medcin.id}} </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="firstName">
-              <mat-header-cell *matHeaderCellDef> Nom </mat-header-cell>
-              <mat-cell *matCellDef="let medcin">
-                {{medcin.firstName}}
-              </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="lastName">
-              <mat-header-cell *matHeaderCellDef> Prénom </mat-header-cell>
-              <mat-cell *matCellDef="let medcin">
-                {{medcin.lastName }}
-              </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="admin">
-              <mat-header-cell *matHeaderCellDef> Admin </mat-header-cell>
-              <mat-cell *matCellDef="let medcin">
-                {{ medcin.admin }}
-              </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="isAuthorize">
-              <mat-header-cell *matHeaderCellDef> Authorized </mat-header-cell>
-              <mat-cell *matCellDef="let medcin">
-                {{ medcin.isAuthorize }}
-              </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-        </mat-card-content>
-      </mat-card>
-    </div>
-  </div>
+  </mat-card>
 </div>
 
