--- a/packages/client/src/app/patient/components/traitements/traitements.component.html
+++ b/packages/client/src/app/patient/components/traitements/traitements.component.html
@@ -2,44 +2,32 @@
   <mat-card>
   <div fxLayout="row" fxLayoutWrap="wrap">
     <div fxFlex.gt-sm="40" fxFlex="100">
-      <!-- <mat-card> -->
-        <mat-card-content>
-          <div fxLayout="column">
-            <mat-form-field style="width:100%">
-              <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="traitement.date" name="date">
-              <owl-date-time #dt1></owl-date-time>
-            </mat-form-field>
-            <mat-form-field style="width:100%">
-              <textarea matInput placeholder="Description" rows="3" [(ngModel)]="traitement.text" name="text"></textarea>
-            </mat-form-field>
-            <button mat-raised-button color="primary" (click)="addPatientTraitement()"><mat-icon>add</mat-icon>Ajouter</button>
-          </div>
-        </mat-card-content>
-      <!-- </mat-card> -->
+      <mat-card-content>
+        <div fxLayout="column">
+          <mat-form-field style="width:100%">
+            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="traitement.date" name="date">
+            <owl-date-time #dt1></owl-date-time>
+          </mat-form-field>
+          <mat-form-field style="width:100%">
+            <textarea matInput placeholder="Description" rows="3" [(ngModel)]="traitement.text" name="text"></textarea>
+          </mat-form-field>
+          <button mat-raised-button color="primary" (click)="addPatientTraitement()"><mat-icon>add</mat-icon>Ajouter</button>
+        </div>
+      </mat-card-content>
     </div>
     <div fxFlex.gt-sm="60" fxFlex="100">
-      <!-- <mat-card> -->
-        <mat-card-content>
-          <mat-table #table [dataSource]="dataSource">
-            <ng-container matColumnDef="date">
-              <mat-header-cell *matHeaderCellDef> Date Time </mat-header-cell>
-              <mat-cell *matCellDef="let traitement">
-                {{ traitement.date | date : 'yyyy-MM-dd HH:mm' }}
-              </mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="text">
-              <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
-              <mat-cell *matCellDef="let traitement">
-                {{traitement.text }}
-              </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-        </mat-card-content>
-      <!-- </mat-card> -->
+      <ngx-datatable *ngIf='traitements'
+        class="material" [rows]="traitements"
+        [columnMode]="'force'" [headerHeight]="50"
+        [footerHeight]="50" [rowHeight]="50"
+        [scrollbarV]="true" [limit]="6">
+        <ngx-datatable-column [width]="100" name="Date Time" prop="date" [resizeable]="false"> 
+        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+          {{ value | date: 'yyyy-MM-dd HH:mm' }}
+        </ng-template>
+        </ngx-datatable-column>
+        <ngx-datatable-column [width]="150" name="Description" prop="text" [resizeable]="false"></ngx-datatable-column>
+      </ngx-datatable>
     </div>
   </div>
   </mat-card>
