--- a/packages/client/src/app/patient/components/chat/chat.component.html
+++ b/packages/client/src/app/patient/components/chat/chat.component.html
@@ -20,7 +20,7 @@
     <div *ngIf="msg.medcin.id !== userId" class="chat-conversation-user them">
       <div class="chat-conversation-message">
         <p> 
-          {{ msg.medcin.firstName  }}  {{ msg.medcin.lastName }}  <br> 
+          <b>{{ msg.medcin.firstName  }}  {{ msg.medcin.lastName }}</b> <br> 
           {{msg.text}}
           <span class="chat-date">{{ msg.date | date: 'shortTime' }}</span>
         </p>
