--- a/packages/client/src/app/patient/components/chat/chat.component.html
+++ b/packages/client/src/app/patient/components/chat/chat.component.html
@@ -30,14 +30,16 @@
   </mat-card-content>
   <hr>
   <mat-card-actions>
+    <form #f="ngForm">
     <div fxLayout="row" layout-align="start center">
       <mat-form-field class="mr-1 ml-1" fxFlex>
-        <input matInput placeholder="Send message" [(ngModel)]="msg">
+        <input matInput placeholder="Send message" [(ngModel)]="msg" name="msg" required>
       </mat-form-field>
-      <button mat-fab [ngStyle]="{'background-color':index === 0 ? '#E3F2FD' : '#fde8a9' }" (click)="createClinique()">
+      <button [disabled]="!f.valid" mat-fab [ngStyle]="{'background-color':index === 0 ? '#E3F2FD' : '#fde8a9' }" (click)="createClinique()">
         <mat-icon>send</mat-icon>
       </button>
     </div>
+    </form>
   </mat-card-actions>
 </mat-card>
 
