--- a/packages/client/src/app/patient/components/hematologie-form/hematologie-form.component.html
+++ b/packages/client/src/app/patient/components/hematologie-form/hematologie-form.component.html
@@ -5,7 +5,7 @@
         <div fxFlex="30"></div>
         <div fxFlex="50">
           <mat-form-field style="width:80%">
-            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="hematologie.date" name="date">
+            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="hematologie.date" name="date" required>
             <owl-date-time #dt1></owl-date-time>
           </mat-form-field>
         </div>
@@ -24,7 +24,7 @@
     <mat-card-actions>
       <div fxLayout="row">
         <div fxFlex="30"></div>
-        <button mat-raised-button color="primary" type="submit"> Ajouter </button>
+        <button mat-raised-button [disabled]="!hematologieForm.valid" color="primary" type="submit"> Ajouter </button>
         <div fxFlex="20"></div>
         <button mat-raised-button color="warn" (click)="cancelForm()"> Annuler </button>
         <div fxFlex="30"></div>
