--- a/packages/client/src/app/patient/components/information-form/information-form.component.html
+++ b/packages/client/src/app/patient/components/information-form/information-form.component.html
@@ -7,7 +7,7 @@
         <div fxFlex="20"></div>
         <div fxFlex="60">
           <mat-form-field style="width:80%">
-            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="information.date" name="date">
+            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="information.date" name="date" required>
             <owl-date-time #dt1></owl-date-time>
           </mat-form-field>
         </div>
@@ -58,7 +58,7 @@
       <div fxLayout="row">
         <div fxFlex="35">
           <span fxFlex></span>
-          <button mat-raised-button color="primary" type="submit"> Ajouter </button>
+          <button mat-raised-button [disabled]="!informationForm.valid" color="primary" type="submit"> Ajouter </button>
         </div>
         <div fxFlex="33">
           <span fxFlex></span>
