--- a/packages/client/src/app/patient/components/traitements/traitements.component.html
+++ b/packages/client/src/app/patient/components/traitements/traitements.component.html
@@ -3,16 +3,18 @@
   <div fxLayout="row" fxLayoutWrap="wrap">
     <div fxFlex.gt-sm="40" fxFlex="100">
       <mat-card-content>
+        <form #f="ngForm">
         <div fxLayout="column">
           <mat-form-field style="width:100%">
-            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="traitement.date" name="date">
+            <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1" placeholder="Date Time" [(ngModel)]="traitement.date" name="date" required>
             <owl-date-time #dt1></owl-date-time>
           </mat-form-field>
           <mat-form-field style="width:100%">
-            <textarea matInput placeholder="Description" rows="3" [(ngModel)]="traitement.text" name="text"></textarea>
+            <textarea matInput placeholder="Description" rows="3" [(ngModel)]="traitement.text" name="text" required></textarea>
           </mat-form-field>
-          <button mat-raised-button color="primary" (click)="addPatientTraitement()"><mat-icon>add</mat-icon>Ajouter</button>
+          <button mat-raised-button [disabled]="!f.valid" color="primary" (click)="addPatientTraitement()"><mat-icon>add</mat-icon>Ajouter</button>
         </div>
+        </form>
       </mat-card-content>
     </div>
     <div fxFlex.gt-sm="60" fxFlex="100">
@@ -20,7 +22,10 @@
         class="material" [rows]="traitements"
         [columnMode]="'force'" [headerHeight]="50"
         [footerHeight]="50" [rowHeight]="50"
-        [scrollbarV]="true" [limit]="6">
+        [scrollbarV]="true" [limit]="6"
+        [selected]="selected"
+        [selectionType]="'single'"
+        (select)="onSelectRow($event)">
         <ngx-datatable-column [width]="100" name="Date Time" prop="date" [resizeable]="false"> 
         <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
           {{ value | date: 'yyyy-MM-dd HH:mm' }}
