--- a/packages/client/src/app/patient/components/bilans/bilans.component.html
+++ b/packages/client/src/app/patient/components/bilans/bilans.component.html
@@ -34,7 +34,7 @@
    <hr> 
   <mat-card-content>
     <h4 class="mt-0 mb-1">Courbe</h4>
-    <mat-card-content *ngIf="results" style="width: 900px; height: 400px;">
+    <mat-card-content *ngIf="results">
       <ngx-charts-line-chart [view]="view" [scheme]="colorScheme" [results]="results"
         xAxis="true" yAxis="true" roundDomains="true" legend="true" (select)="onSelect($event)">
       </ngx-charts-line-chart>
