--- a/packages/client/src/app/core/header/header.component.html
+++ b/packages/client/src/app/core/header/header.component.html
@@ -11,9 +11,9 @@
       <input type="text" placeholder="Search" autofocus="true" />
     </form> -->
   </div>
-  <!-- <button (click)="fullScreenToggle()" mat-icon-button>
+  <button (click)="fullScreenToggle()" mat-icon-button>
     <mat-icon>fullscreen</mat-icon>
-  </button> -->
+  </button>
   <!-- <button (click)="toggleNotificationSidenav.emit()" mat-icon-button class="ml-xs overflow-visible">
     <mat-icon>notifications</mat-icon>
     <span class="notification-label">5</span>
