add delete fonctionality

--- a/packages/client/src/app/medcin/medcins/medcins.component.html
+++ b/packages/client/src/app/medcin/medcins/medcins.component.html
@@ -28,6 +28,11 @@
             <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+value]" href="">Voir Profile </a>
         </ng-template>
       </ngx-datatable-column>
+      <ngx-datatable-column [width]="120" name="Action" prop="id" [resizeable]="false">
+        <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+          <a mat-raised-button color="warn" (click)="deleteM(value)">Supprimer </a>
+        </ng-template>
+      </ngx-datatable-column>
     </ngx-datatable>
   <hr>
   <mat-card-footer></mat-card-footer>
