--- a/packages/client/src/app/patient/components/bilans/bilans.component.html
+++ b/packages/client/src/app/patient/components/bilans/bilans.component.html
@@ -7,7 +7,7 @@
 
   <ngx-datatable *ngIf='columns'
     class="material striped selection-cell cell-selection"
-    [rows]="r"
+    [rows]="bilans"
     [loadingIndicator]="loadingIndicator"
     [columnMode]="'force'"
     [headerHeight]="50"
