--- a/packages/client/src/app/patient/components/hematologies/hematologies.component.html
+++ b/packages/client/src/app/patient/components/hematologies/hematologies.component.html
@@ -6,9 +6,14 @@
       <mat-icon>add</mat-icon>NEW </button>
   </mat-toolbar>
     
-  <ngx-datatable *ngIf='columns' class="material striped selection-cell cell-selection" [rows]="r" [loadingIndicator]="loadingIndicator"
-    [columnMode]="'force'" [headerHeight]="50" [footerHeight]="50" [rowHeight]="50" [scrollbarV]="true" [scrollbarH]="true"
-    [selected]="selected" [selectionType]="'single'" [limit]="8" (select)='onSelectRow($event)'>
+  <ngx-datatable *ngIf='columns' 
+    class="material striped selection-cell cell-selection"
+    [rows]="hematologies" [loadingIndicator]="loadingIndicator"
+    [columnMode]="'force'" [headerHeight]="50"
+    [footerHeight]="50" [rowHeight]="50" 
+    [scrollbarV]="true" [scrollbarH]="true"
+    [selected]="selected" [selectionType]="'single'" 
+    [limit]="8" (select)='onSelectRow($event)'>
     <ngx-datatable-column [frozenLeft]="true" name="Date" prop="date" [width]="250" [resizeable]="false">
       <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
         {{ value | date : 'yyyy-MM-dd HH:mm' }}
