--- a/packages/client/src/app/medcin/medcins/medcins.component.html
+++ b/packages/client/src/app/medcin/medcins/medcins.component.html
@@ -28,7 +28,7 @@
             <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+value]" href="">Voir Profile </a>
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column [width]="120" name="Action" prop="id" [resizeable]="false">
+      <ngx-datatable-column *ngIf="admin === 1" [width]="120" name="Action" prop="id" [resizeable]="false">
         <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
           <a mat-raised-button color="warn" (click)="deleteM(value)">Supprimer </a>
         </ng-template>
