--- a/packages/client/src/app/patient/components/patients/patients.component.html
+++ b/packages/client/src/app/patient/components/patients/patients.component.html
@@ -47,7 +47,7 @@
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column [width]="120" name="Action" prop="id" [resizeable]="false">
+    <ngx-datatable-column *ngIf="admin === 1" [width]="120" name="Action" prop="id" [resizeable]="false">
       <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
         <a mat-raised-button color="warn" (click)="deleteP(value)">Supprimer </a>
       </ng-template>
