--- a/packages/client/src/app/medcin/medcins/medcins.component.html
+++ b/packages/client/src/app/medcin/medcins/medcins.component.html
@@ -25,7 +25,7 @@
       <ngx-datatable-column [width]="100" name="Email" prop="email" [resizeable]="false"></ngx-datatable-column>
       <ngx-datatable-column [width]="120" name="Action" prop="id" [resizeable]="false">
         <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
-            <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+value]" href="">Voir Profile </a>
+            <a mat-raised-button color="primary" [routerLink]="['/medcin/user-profile/'+value]" href="">Voir Profil </a>
         </ng-template>
       </ngx-datatable-column>
       <ngx-datatable-column *ngIf="admin === 1" [width]="120" name="Action" prop="id" [resizeable]="false">
