--- a/packages/client/src/app/core/admin-layout/admin-layout.component.html
+++ b/packages/client/src/app/core/admin-layout/admin-layout.component.html
@@ -16,5 +16,5 @@
   </mat-sidenav-container>
 
   <!-- Demo Purposes Only -->
-  <!-- <app-options (messageEvent)="receiveOptions($event)"></app-options> -->
+  <app-options (messageEvent)="receiveOptions($event)"></app-options>
   <!-- /Demo Purposes Only -->
