--- a/packages/client/src/app/patient/components/patients/patients.component.html
+++ b/packages/client/src/app/patient/components/patients/patients.component.html
@@ -11,7 +11,7 @@
               En attente
             </mat-option>
             <mat-option  [value]="3">
-              Greffée
+              Greffés
             </mat-option>
           </mat-select>
         </mat-form-field>
