--- a/packages/client/src/app/medcin/edit-medcin/edit-medcin.component.html
+++ b/packages/client/src/app/medcin/edit-medcin/edit-medcin.component.html
@@ -57,8 +57,8 @@
           <mat-form-field style="width: 100%">
             <mat-select [(value)]="medcin.specialty" placeholder="Spécialité" [formControl]="form.controls['specialty']">
               <mat-option> </mat-option>
-              <mat-option value="doctor">Doctor</mat-option>
-              <mat-option value="nurse">Nurse</mat-option>
+              <mat-option value="medecin">Medecin</mat-option>
+              <mat-option value="infirmier">Infirmier</mat-option>
             </mat-select>
           </mat-form-field>
           <small *ngIf="form.controls['specialty'].hasError('required') && form.controls['specialty'].touched" class="mat-text-warn">You must include a specialty.</small>
